--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
                     <div class="row px-2 px-sm-0 d-flex flex-column flex-md-row justify-content-center rdx-shaping-portfolio">
                         <div class="exp col-12 col-sm-10 col-xl-5 mx-auto bg-blur d-md-flex my-5 px-0 d-inline-flex">
                             <div class="col-6 p-0">
-                                <img src="images/portfolio-01.jpg" alt="p1" class="img-fluid rounded-start">
+                                <img src="images/portfolio-01.jpg" alt="p1" class="rounded-start">
                             </div>
                             <div class="p-3 col-6">
                                 <h5 class="ps-2 form-title">Project-1</h5>
@@ -79,7 +79,7 @@
                         </div>
                         <div class="exp col-12 col-sm-10 col-xl-5 mx-auto bg-blur d-flex my-5 px-0">
                             <div class="col-6 p-0">
-                                <img src="images/portfolio-04.jpg" alt="p1" class="img-fluid rounded-start">
+                                <img src="images/portfolio-04.jpg" alt="p1" class="rounded-start">
                             </div>
                             <div class="p-3 col-6">
                                 <h5 class="ps-2 form-title">Project-2</h5>
@@ -92,7 +92,7 @@
                         </div>
                         <div class="exp col-12 col-sm-10 col-xl-5 mx-auto bg-blur d-flex my-5 px-0">
                             <div class="col-6 p-0">
-                                <img src="images/portfolio-03.jpg" alt="p1" class="img-fluid rounded-start">
+                                <img src="images/portfolio-03.jpg" alt="p1" class="rounded-start">
                             </div>
                             <div class="p-3 col-6">
                                 <h5 class="ps-2 form-title">Project-3</h5>
@@ -105,7 +105,7 @@
                         </div>
                         <div class="exp col-12 col-sm-10 col-xl-5 mx-auto bg-blur d-flex my-5 px-0">
                             <div class="col-6 p-0">
-                                <img src="images/portfolio-02.jpg" alt="p1" class="img-fluid rounded-start">
+                                <img src="images/portfolio-02.jpg" alt="p1" class="rounded-start">
                             </div>
                             <div class="p-3 col-6">
                                 <h5 class="ps-2 form-title">Project-4</h5>
@@ -118,7 +118,7 @@
                         </div>
                         <div class="exp col-12 col-sm-10 col-xl-5 mx-auto bg-blur d-md-flex my-5 px-0 d-inline-flex">
                             <div class="col-6 p-0">
-                                <img src="images/portfolio-01.jpg" alt="p1" class="img-fluid rounded-start">
+                                <img src="images/portfolio-01.jpg" alt="p1" class="rounded-start">
                             </div>
                             <div class="p-3 col-6">
                                 <h5 class="ps-2 form-title">Project-5</h5>
@@ -132,7 +132,7 @@
                         
                         <div class="exp col-12 col-sm-10 col-xl-5 mx-auto bg-blur d-flex my-5 px-0">
                             <div class="col-6 p-0">
-                                <img src="images/portfolio-04.jpg" alt="p1" class="img-fluid rounded-start">
+                                <img src="images/portfolio-04.jpg" alt="p1" class="rounded-start">
                             </div>
                             <div class="p-3 col-6">
                                 <h5 class="ps-2 form-title">Project-6</h5>
@@ -145,7 +145,7 @@
                         </div>
                         <div class="exp col-12 col-sm-10 col-xl-5 mx-auto bg-blur d-flex my-5 px-0">
                             <div class="col-6 p-0">
-                                <img src="images/portfolio-03.jpg" alt="p1" class="img-fluid rounded-start">
+                                <img src="images/portfolio-03.jpg" alt="p1" class="rounded-start">
                             </div>
                             <div class="p-3 col-6">
                                 <h5 class="ps-2 form-title">Project-7</h5>
@@ -158,7 +158,7 @@
                         </div>
                         <div class="exp col-12 col-sm-10 col-xl-5 mx-auto bg-blur d-flex my-5 px-0">
                             <div class="col-6 p-0">
-                                <img src="images/portfolio-02.jpg" alt="p1" class="img-fluid rounded-start">
+                                <img src="images/portfolio-02.jpg" alt="p1" class="rounded-start">
                             </div>
                             <div class="p-3 col-6">
                                 <h5 class="ps-2 form-title">Project-8</h5>
